# wasm-serialize

./: Cargo.toml  README.md  build.sh  test.js
demo/: Cargo.toml
demo/src/: data.json  lib.rs
wasm-serialize/: Cargo.toml
wasm-serialize-derive/: Cargo.toml
wasm-serialize-derive/src/: lib.rs
wasm-serialize/src/: lib.rs
